# Colony-Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.ini  docker-compose.yml  launcher.py  main.py  pyproject.toml  requirements.txt
data/: README.txt
lib/: admin.py  client.py  config.py  database.py  definitions.py  events.py  exceptions.py  general_logging.py
snaps/: README.txt
tools/: packet_dissector.py  packet_inspector.py  read_dumps.py
