[project]
name = "colony-server"
version = "0.1.0"
description = "Back-end server created from scratch for an old RTS flash game called Colony."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "charset-normalizer>=3.4.4",
    "colorama>=0.4.6",
    "discord>=2.3.2",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pyshark>=0.6",
]
